# blockchaincraft

./: .gitignore  README.md
fabric/: build.gradle  gradle.properties
fabric/.direnv/: flake-profile-1-link
fabric/src/main/java/com/commandert3706/: BlockchainCraft.java
fabric/src/main/java/com/commandert3706/commands/: BlockchainCraftCommands.java  ShopCommand.java
fabric/src/main/java/com/commandert3706/commands/suggestions/: CurrentPlayerAccountSuggestionProvider.java  PlayerAccountSuggestionProvider.java  PlayerSuggestionProvider.java
fabric/src/main/java/com/commandert3706/interaction/: AccountManager.java  OutputFormatting.java  ReadableAccountResponse.java  Transaction.java
fabric/src/main/resources/: fabric.mod.json
server/: Cargo.toml
server/src/: main.rs
server/src/blockchain/: db.rs  mod.rs  models.rs
server/src/db/: mod.rs
server/src/request_models/: mod.rs
