[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
chrono = {  version = "0.4.39", features = ["serde"] }
sha2 = "0.10.8"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
rusqlite = { version = "0.32.1", features = ["bundled"] }
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"]}